--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="./static/img.jpg" type="image/x-icon" />
-        <title>Github Globe || RNK</title>
-    </head>
-    <body>
-        <div class="mainDiv">
-            <div id="globe-container"></div>
-            <!-- Sidebar -->
-            <div id="sidebar"></div>
-            <!-- Sidebar items will be added here -->
-            </div>
-        </div>
-        <script type="module">
 
-          </script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./static/img.jpg" type="image/x-icon" />
+    <title>Github Globe || RNK</title>
+</head>
+
+<body>
+    <div class="mainDiv">
+        <div id="globe-container"></div>
+        <!-- Sidebar -->
+        <div id="sidebar"></div>
+        <!-- Sidebar items will be added here -->
+        <!-- Text container for labels -->
+        <div id="text-container" style="position: absolute; top: 0; left: 0; pointer-events: none;"></div>
+    </div>
+    <script type="module">
+        // Your JavaScript code here
+    </script>
+</body>
+
 </html>
